2007-08-09  Torsten Rahn  <rahn@kde.org>

    - Ladies and gentlemen, we introduce the 
	International Date Line.
      Cross it from east to the west to enjoy 
      a peek 24-hours ahead into the future of KDE 4.

     Our IDL includes the Kiribati line.

     More info at: 
http://en.wikipedia.org/wiki/International_Dateline

     * tools/dateline/dateline.pro
     * tools/dateline/dateline.cpp
     * data/mwdbii/DATELINE.PNT
     * data/CMakeLists.txt

2007-08-09  Torsten Rahn  <rahn@kde.org>

    - The guy's name is not Marcator but
	http://en.wikipedia.org/wiki/Gerardus_Mercator
	The same is true for the projection.

	Corrected Projections->Projection
	as it's not ints, bools, etc. either ;-)
    - Some changes related to the dateline.

    * src/lib/ViewParams.h
    * src/lib/vectorcomposer.cpp

2007-08-08  Murad Tagirov  <tmurad@gmail.com>

    - Added method to write cache index file.
    PlaceMarkManager will restore already loaded documents
    based on this index file. Added base methods to pack/unpack kml documents
    * src/lib/placemarkmanager.{h,cpp}

    - Added copyright information.
    * src/lib/kml/Serializable.h

2007-08-08  Torsten Rahn  <rahn@kde.org>

    - Fixing #endif and adding the missing icon for the Mac

    * src/CMakeLists.txt
    * src/mac/Contents/Resources/Marble.icns

2007-08-08  Torsten Rahn  <rahn@kde.org>

    - Initial support for the International Dateline

    * src/lib/vectorcomposer.{h,cpp}

    - Big Patch by Tim Sutton of QGIS fame:
	- lots of cmake changes mostly specific to the Mac
	  that remove the need for the BuildOnOSX.sh script
	- some minor fixes in the GPS and KML stuff

    * src/plugins/CMakeLists.txt
    * src/mac/CMakeLists.txt
    * src/mac/Contents/Resources/CMakeLists.txt
    * src/mac/Contents/CMakeLists.txt
    * src/lib/MarbleWidget.cpp
    * src/lib/gps/Route.cpp
    * src/lib/gps/Track.cpp
    * src/lib/kml/KMLDocumentParser.cpp
    * src/lib/kml/Serializable.h
    * src/lib/MarbleWidget.h