@@ -17,6 +17,9 @@ endif(APPLE OR WIN32)
 set (PEDANTIC FALSE CACHE BOOL "Determines if we should compile with -Wall -Werror.")
 set (ENABLE_TESTS FALSE CACHE BOOL "Build unit tests?")
 set (WITH_DESIGNER_PLUGIN FALSE CACHE BOOL "Build designer plugin?")
+# @TODO - make os specific versions of below
+set (MARBLE_DATA_PATH ${CMAKE_INSTALL_PREFIX}/share/marble CACHE STRING "Marble data directory")
+
 
 if(WIN32)
   set (STATIC_BUILD false cache bool "Link to static Qt libs (win32 only)?")
@@ -108,6 +111,12 @@ ADD_CUSTOM_TARGET(svnversion
 if (PEDANTIC)
   ADD_DEFINITIONS( -Wall -Werror )
 endif (PEDANTIC)
+
+#############################################################
+# Create a compiler flag so we can compile in the data path
+
+ADD_DEFINITIONS(-DMARBLE_DATA_PATH="\\"${MARBLE_DATA_PATH}\\"")
+
 #############################################################
 # Add a compiler def so that we can conditionally compile
 # code in debug mode only (e.g. extra console messages)
